--- a/sql/sesion1.ipynb
+++ b/sql/sesion1.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jesusGS01/BDGE/blob/main/sql/sesion1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "HnLp0SNrIWqW"
       },
       "source": [
@@ -39,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "c3CXfty1iRum"
       },
@@ -50,11 +60,120 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "Xcy7h029JBPQ"
+        "id": "Xcy7h029JBPQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d838329a-13da-4153-e8cb-c02c9428566a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mysqld will log errors to /var/log/mysql/error.log\n",
+            "mysqld is running as pid 1657\n",
+            "Created symlink /etc/systemd/system/multi-user.target.wants/mysql.service → /lib/systemd/system/mysql.service.\n",
+            "invoke-rc.d: could not determine current runlevel\n",
+            "invoke-rc.d: policy-rc.d denied execution of start.\n",
+            "Setting up mecab-ipadic (2.7.0-20070801+main-3) ...\n",
+            "Compiling IPA dictionary for Mecab.  This takes long time...\n",
+            "reading /usr/share/mecab/dic/ipadic/unk.def ... 40\n",
+            "emitting double-array: 100% |###########################################| \n",
+            "/usr/share/mecab/dic/ipadic/model.def is not found. skipped.\n",
+            "reading /usr/share/mecab/dic/ipadic/Others.csv ... 2\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.others.csv ... 151\n",
+            "reading /usr/share/mecab/dic/ipadic/Filler.csv ... 19\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.proper.csv ... 27328\n",
+            "reading /usr/share/mecab/dic/ipadic/Adverb.csv ... 3032\n",
+            "reading /usr/share/mecab/dic/ipadic/Adj.csv ... 27210\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.adverbal.csv ... 795\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.verbal.csv ... 12146\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.name.csv ... 34202\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.nai.csv ... 42\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.place.csv ... 72999\n",
+            "reading /usr/share/mecab/dic/ipadic/Conjunction.csv ... 171\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.csv ... 60477\n",
+            "reading /usr/share/mecab/dic/ipadic/Prefix.csv ... 221\n",
+            "reading /usr/share/mecab/dic/ipadic/Auxil.csv ... 199\n",
+            "reading /usr/share/mecab/dic/ipadic/Postp.csv ... 146\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.org.csv ... 16668\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.adjv.csv ... 3328\n",
+            "reading /usr/share/mecab/dic/ipadic/Suffix.csv ... 1393\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.number.csv ... 42\n",
+            "reading /usr/share/mecab/dic/ipadic/Verb.csv ... 130750\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.demonst.csv ... 120\n",
+            "reading /usr/share/mecab/dic/ipadic/Interjection.csv ... 252\n",
+            "reading /usr/share/mecab/dic/ipadic/Adnominal.csv ... 135\n",
+            "reading /usr/share/mecab/dic/ipadic/Postp-col.csv ... 91\n",
+            "reading /usr/share/mecab/dic/ipadic/Symbol.csv ... 208\n",
+            "emitting double-array: 100% |###########################################| \n",
+            "reading /usr/share/mecab/dic/ipadic/matrix.def ... 1316x1316\n",
+            "emitting matrix      : 100% |###########################################| \n",
+            "\n",
+            "done!\n",
+            "update-alternatives: using /var/lib/mecab/dic/ipadic to provide /var/lib/mecab/dic/debian (mecab-dictionary) in auto mode\n",
+            "Setting up mecab-ipadic-utf8 (2.7.0-20070801+main-3) ...\n",
+            "Compiling IPA dictionary for Mecab.  This takes long time...\n",
+            "reading /usr/share/mecab/dic/ipadic/unk.def ... 40\n",
+            "emitting double-array: 100% |###########################################| \n",
+            "/usr/share/mecab/dic/ipadic/model.def is not found. skipped.\n",
+            "reading /usr/share/mecab/dic/ipadic/Others.csv ... 2\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.others.csv ... 151\n",
+            "reading /usr/share/mecab/dic/ipadic/Filler.csv ... 19\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.proper.csv ... 27328\n",
+            "reading /usr/share/mecab/dic/ipadic/Adverb.csv ... 3032\n",
+            "reading /usr/share/mecab/dic/ipadic/Adj.csv ... 27210\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.adverbal.csv ... 795\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.verbal.csv ... 12146\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.name.csv ... 34202\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.nai.csv ... 42\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.place.csv ... 72999\n",
+            "reading /usr/share/mecab/dic/ipadic/Conjunction.csv ... 171\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.csv ... 60477\n",
+            "reading /usr/share/mecab/dic/ipadic/Prefix.csv ... 221\n",
+            "reading /usr/share/mecab/dic/ipadic/Auxil.csv ... 199\n",
+            "reading /usr/share/mecab/dic/ipadic/Postp.csv ... 146\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.org.csv ... 16668\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.adjv.csv ... 3328\n",
+            "reading /usr/share/mecab/dic/ipadic/Suffix.csv ... 1393\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.number.csv ... 42\n",
+            "reading /usr/share/mecab/dic/ipadic/Verb.csv ... 130750\n",
+            "reading /usr/share/mecab/dic/ipadic/Noun.demonst.csv ... 120\n",
+            "reading /usr/share/mecab/dic/ipadic/Interjection.csv ... 252\n",
+            "reading /usr/share/mecab/dic/ipadic/Adnominal.csv ... 135\n",
+            "reading /usr/share/mecab/dic/ipadic/Postp-col.csv ... 91\n",
+            "reading /usr/share/mecab/dic/ipadic/Symbol.csv ... 208\n",
+            "emitting double-array: 100% |###########################################| \n",
+            "reading /usr/share/mecab/dic/ipadic/matrix.def ... 1316x1316\n",
+            "emitting matrix      : 100% |###########################################| \n",
+            "\n",
+            "done!\n",
+            "update-alternatives: using /var/lib/mecab/dic/ipadic-utf8 to provide /var/lib/mecab/dic/debian (mecab-dictionary) in auto mode\n",
+            "Setting up libhtml-parser-perl:amd64 (3.76-1build2) ...\n",
+            "Setting up mysql-server (8.0.34-0ubuntu0.22.04.1) ...\n",
+            "Setting up libcgi-pm-perl (4.54-1) ...\n",
+            "Setting up libhtml-template-perl (2.97-1.1) ...\n",
+            "Setting up libcgi-fast-perl (1:2.15-1) ...\n",
+            "Processing triggers for man-db (2.10.2-1) ...\n",
+            "Processing triggers for libc-bin (2.35-0ubuntu3.1) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
+            "\n",
+            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "!apt-get install -y mysql-server"
       ]
@@ -1182,7 +1301,8 @@
   "metadata": {
     "colab": {
       "name": "sesion1.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
