--- a/sql/sesion2.ipynb
+++ b/sql/sesion2.ipynb
@@ -4408,13 +4408,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 55,
       "metadata": {
         "id": "lHImFwj6wo-D",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f3183b5-76e1-47a5-a09c-21ee183d2bf7"
+        "outputId": "752b80d1-34df-4c30-ae3b-8b1ca23b1b56"
       },
       "outputs": [
         {
@@ -4422,12 +4422,13 @@
           "name": "stdout",
           "text": [
             " * mysql://root:***@localhost/?charset=utf8mb4&local_infile=1\n",
-            "(MySQLdb.ProgrammingError) (1064, \"You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near 'P.Tags' at line 4\")\n",
+            "(MySQLdb.OperationalError) (1305, 'FUNCTION stackoverflow.UNNEST does not exist')\n",
             "[SQL: CREATE TABLE OwnersTagsPosts AS\n",
             "SELECT P.OwnerUserId, T.Id, P.Id\n",
-            "FROM P Posts, T Tags \n",
-            "WHERE T.TagName IN P.Tags;]\n",
-            "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
+            "FROM Posts P\n",
+            "INNER JOIN Tags T ON T.TagName IN (SELECT UNNEST(string_to_array(P.Tags, '|')))\n",
+            "WHERE P.Tags IS NOT NULL;]\n",
+            "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
           ]
         }
       ],
@@ -4446,12 +4447,12 @@
         "DESCRIBE Tags"
       ],
       "metadata": {
-        "id": "0TxCSaqoom2K",
-        "outputId": "f2bcad73-a4c1-4d34-c4f4-18ab244bb9b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 242
-        }
+        },
+        "id": "0TxCSaqoom2K",
+        "outputId": "f2bcad73-a4c1-4d34-c4f4-18ab244bb9b0"
       },
       "execution_count": 49,
       "outputs": [
