--- a/sql/sesion2.ipynb
+++ b/sql/sesion2.ipynb
@@ -6892,10 +6892,10 @@
       "cell_type": "code",
       "source": [
         "%%sql\n",
-        "EXPLAIN SELECT OTP.OwnerUserId, OTP.TagId, GROUP_CONCAT(OTP.PostId) AS PostIds\n",
-        "FROM OwnersTagsPosts OTP\n",
-        "WHERE OTP.OwnerUserId IS NOT NULL\n",
-        "GROUP BY OTP.OwnerUserId, OTP.TagId;"
+        "EXPLAIN SELECT OwnerUserId, TagId, GROUP_CONCAT(PostId) AS PostIds\n",
+        "FROM OwnersTagsPosts\n",
+        "WHERE OwnerUserId IS NOT NULL\n",
+        "GROUP BY OwnerUserId, TagId;"
       ],
       "metadata": {
         "colab": {
@@ -6903,9 +6903,9 @@
           "height": 115
         },
         "id": "kZaeWfxiKRgA",
-        "outputId": "466568f5-b104-405c-d7d6-8255560f2d7c"
+        "outputId": "cd662d0c-db8d-49c2-d8a4-3aecfd32c798"
       },
-      "execution_count": 155,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "stream",
@@ -6919,15 +6919,15 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   id select_type table partitions   type possible_keys           key key_len  \\\n",
-              "0   1      SIMPLE   OTP       None  index  idx_OwnerTag  idx_OwnerTag       9   \n",
+              "   id select_type            table partitions   type possible_keys  \\\n",
+              "0   1      SIMPLE  OwnersTagsPosts       None  index  idx_OwnerTag   \n",
               "\n",
-              "    ref   rows  filtered        Extra  \n",
-              "0  None  76045      50.0  Using where  "
+              "            key key_len   ref   rows  filtered        Extra  \n",
+              "0  idx_OwnerTag       9  None  76045      50.0  Using where  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-73538ae3-fcc0-45c7-b519-ffc456b11469\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9862530a-cc52-43d6-a325-e066ace27ca2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -6965,7 +6965,7 @@
               "      <th>0</th>\n",
               "      <td>1</td>\n",
               "      <td>SIMPLE</td>\n",
-              "      <td>OTP</td>\n",
+              "      <td>OwnersTagsPosts</td>\n",
               "      <td>None</td>\n",
               "      <td>index</td>\n",
               "      <td>idx_OwnerTag</td>\n",
@@ -6982,7 +6982,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-73538ae3-fcc0-45c7-b519-ffc456b11469')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9862530a-cc52-43d6-a325-e066ace27ca2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -7034,12 +7034,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-73538ae3-fcc0-45c7-b519-ffc456b11469 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9862530a-cc52-43d6-a325-e066ace27ca2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-73538ae3-fcc0-45c7-b519-ffc456b11469');\n",
+              "        const element = document.querySelector('#df-9862530a-cc52-43d6-a325-e066ace27ca2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -7063,7 +7063,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 155
+          "execution_count": 158
         }
       ]
     },
