--- a/sql/sesion2.ipynb
+++ b/sql/sesion2.ipynb
@@ -7384,6 +7384,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Para conseguir la distribución de posts que son respondidos, hemos realizado en\n",
+        "# primer lugar una subconsulta que calcula para cada usuario la cantidad total de\n",
+        "# publicaciones que han realizado, la cantidad de respuestas que han proporcionado,\n",
+        "# y el porcentaje de respuestas en comparación con el total de publicaciones, utilizando\n",
+        "# una agrupación por ID de usuario.\n",
+        "# Posteriormente hemos realizado un \"CASE\" para agrupar los usuarios en rangos de\n",
+        "# porcentaje de respuestas, y agrupado según el rango al que pertenecen. Contamos el\n",
+        "# número de usuarios pertenecientes a cada grupo creado.\n",
+        "# Finalmente establecemos nosotros la ordenación, basándonos en el porcentaje establecido\n",
+        "# en el \"CASE\", estableciendo el orden de los rangos siguiendo el mismo patrón que en\n",
+        "# el documento de referencia.\n",
         "%%sql\n",
         "SELECT\n",
         "    CASE\n",
@@ -7850,8 +7861,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# De manera general, para conseguir la reciprocidad de la comunidad, tendremos que obtener en primer lugar\n",
+        "# los usuarios que realizaron una pregunta y los usuarios que respondieron a esa pregunta.\n",
+        "# Posteriormente, tendremos # que filtrar la consulta anterior, para contemplar la relación entre usuarios como bidireccional,\n",
+        "# es decir, (usuario1 pregunta y usuario2 responde) y (usuario2 pregunta y usuario1 responde). Para que así no se contemple\n",
+        "# como dos relaciones distintas (unidireccional).\n",
+        "# Finalmente deberiamos evitar duplicados ya que puede ser que haya existido varias veces una relación entre dos usuarios.\n",
+        "\n",
         "%%sql\n",
-        "# Creamos en primer lugar la tabla que contendra el ID del usuario que pregunto y el ID del usuario que respondió a la pregunta.\n",
+        "# Creamos en primer lugar una consulta que contendra el ID del usuario que preguntó y el ID del usuario que respondió a la pregunta.\n",
         "# Realizamos \"WITH\" ya que esta consulta será nombrada varias veces posteriormente.\n",
         "WITH QuestionsWithAnswers AS (\n",
         "  SELECT DISTINCT\n",
@@ -7886,9 +7904,9 @@
           "height": 459
         },
         "id": "q0EOAR6Xyl6s",
-        "outputId": "ca10b7ae-7af2-4461-d613-bbfd76f3b80a"
+        "outputId": "6fee33aa-1515-4d8e-f914-a005f88fbec2"
       },
-      "execution_count": 68,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -7919,7 +7937,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6993e887-e691-42a5-a048-5af125c4d741\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9b7e3f8e-7f5a-42a3-b626-9c38cd5d59da\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -8005,7 +8023,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6993e887-e691-42a5-a048-5af125c4d741')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9b7e3f8e-7f5a-42a3-b626-9c38cd5d59da')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -8057,12 +8075,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6993e887-e691-42a5-a048-5af125c4d741 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9b7e3f8e-7f5a-42a3-b626-9c38cd5d59da button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6993e887-e691-42a5-a048-5af125c4d741');\n",
+              "        const element = document.querySelector('#df-9b7e3f8e-7f5a-42a3-b626-9c38cd5d59da');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -8082,8 +8100,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-93539049-f18d-4170-aaa0-8e92ca70ac0b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-93539049-f18d-4170-aaa0-8e92ca70ac0b')\"\n",
+              "<div id=\"df-50b85a22-bf46-4dc5-8b68-ba613fa8efe9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50b85a22-bf46-4dc5-8b68-ba613fa8efe9')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -8202,7 +8220,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-93539049-f18d-4170-aaa0-8e92ca70ac0b button');\n",
+              "        document.querySelector('#df-50b85a22-bf46-4dc5-8b68-ba613fa8efe9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -8213,7 +8231,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 110
         }
       ]
     },
@@ -8689,12 +8707,12 @@
         "SELECT * FROM TagsUsers;"
       ],
       "metadata": {
-        "id": "tvxK_aHX8Cz9",
-        "outputId": "47dcbeeb-979b-4dea-88a8-52de8ec0ec42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 511
-        }
+        },
+        "id": "tvxK_aHX8Cz9",
+        "outputId": "47dcbeeb-979b-4dea-88a8-52de8ec0ec42"
       },
       "execution_count": 88,
       "outputs": [
