--- a/mongo/sesion4.ipynb
+++ b/mongo/sesion4.ipynb
@@ -9502,6 +9502,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Ahora procedemos a realizar el gráfico"
+      ],
+      "metadata": {
+        "id": "JN_fQsA53uiN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "resultRQ3 = db.posts.aggregate([\n",
