--- a/mongo/sesion4.ipynb
+++ b/mongo/sesion4.ipynb
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "x9-RN4ZSY5o9"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "n5BdH3KOZA47"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -60,12 +60,12 @@
       "metadata": {
         "id": "J2M97e3BfQfB"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "ezAIGix1IehU",
         "colab": {
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "bkQTZoJDIehX",
         "colab": {
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "pJ25BFUcIehY"
       },
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "aRypLsP2IehZ"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "0CH-EbXBIeha",
         "colab": {
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "e4-poVR5Iehb",
         "colab": {
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "txLEqNUWIehb",
         "colab": {
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "xE0Sl869XK2Y",
         "colab": {
@@ -325,7 +325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "C0Le2anDXK2k"
       },
@@ -351,7 +351,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "Pc7akqe0XK2t"
       },
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "s4BiT5o9XK20",
         "colab": {
@@ -399,7 +399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "3xqmSSGdXK25",
         "colab": {
@@ -560,7 +560,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "D6TpCHUufbpp",
         "colab": {
@@ -597,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "C0dR1mcffbpu",
         "colab": {
@@ -633,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "7zSyY2pffbp4"
       },
@@ -686,7 +686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "PP5jW7W0IWrF"
       },
@@ -722,7 +722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "hUVr0cPGfbp9"
       },
@@ -733,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "I1JYOx-rfbqJ"
       },
@@ -744,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "SdJsUjREfbqO"
       },
@@ -755,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "ev1yW2-8fbqS"
       },
@@ -766,7 +766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "fCetnARxfbqX"
       },
@@ -777,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "mIWOxATUfbqb",
         "colab": {
@@ -825,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "kEFZ3Db8fbqg",
         "colab": {
@@ -865,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "t2UnpYlJfbq3",
         "scrolled": true,
@@ -978,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "2b3WDt0xA1UY",
         "colab": {
@@ -1037,7 +1037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "0HRH68mufbrL",
         "colab": {
@@ -1094,7 +1094,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "iyZg-6TLfbrP",
         "scrolled": true,
@@ -2063,7 +2063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "Ge_iO8dHfbrS",
         "colab": {
@@ -2237,7 +2237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "EphHDIKyfbrU",
         "colab": {
@@ -2322,7 +2322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "JMS_VrLtfbrZ",
         "scrolled": true,
@@ -2777,7 +2777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "hkg8Kisqfbrd",
         "scrolled": true,
@@ -3623,7 +3623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "9Sjnp3LXfbre",
         "colab": {
@@ -3757,7 +3757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "qBI8nYpffbrw",
         "colab": {
@@ -6827,7 +6827,7 @@
         },
         "outputId": "8a0f550e-d959-4ce4-c41d-0867a6c1c309"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7175,7 +7175,7 @@
       "metadata": {
         "id": "M3JCCSpnmWvx"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7189,7 +7189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "HjaAdRxOptQQ",
         "colab": {
@@ -7254,8 +7254,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "En primer lugar, realizaremos la coleccion que **asocia un usuario con las preguntas que ha hecho de cada tag (dado como su ID de tag).**"
+      ],
+      "metadata": {
+        "id": "mhPOcGEz_RxD"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "By9Qt_xFfbrz",
         "colab": {
@@ -8276,29 +8285,30 @@
         }
       ],
       "source": [
-        "# Asociar usuarios con preguntas por tag\n",
+        "# Asociaremos aquellos usuarios que una pregunta sobre un tag\n",
         "usuarios_preguntasTag = db.posts.aggregate([\n",
-        "  { \"$match\": { \"PostTypeId\": 1 }}, # Solo preguntas\n",
+        "  { \"$match\": { \"PostTypeId\": 1 }}, # Buscamos solo preguntas\n",
         "  {\n",
         "    \"$addFields\": {\n",
         "      \"tagsArray\": {\n",
         "        \"$map\": {\n",
-        "          \"input\": { \"$split\": [\"$Tags\", \"><\"] }, # Dividir los tags\n",
-        "          \"in\": { \"$trim\": { \"input\": { \"$replaceAll\": { \"input\": { \"$replaceAll\": { \"input\": \"$$this\", \"find\": \"<\", \"replacement\": \"\" } }, \"find\": \">\", \"replacement\": \"\" } }, \"chars\": \" \" } } # Eliminar caracteres especiales y espacios\n",
+        "          \"input\": { \"$split\": [\"$Tags\", \"><\"] }, # Dividimos los diferentes tags\n",
+        "          # Eliminaremos los caracteres especiales restantes (primer tag y ultimo tag) y espacios\n",
+        "          \"in\": { \"$trim\": { \"input\": { \"$replaceAll\": { \"input\": { \"$replaceAll\": { \"input\": \"$$this\", \"find\": \"<\", \"replacement\": \"\" } }, \"find\": \">\", \"replacement\": \"\" } }, \"chars\": \" \" } }\n",
         "        }\n",
         "      }\n",
         "    }\n",
         "  },\n",
-        "  { \"$unwind\": \"$tagsArray\" }, # Desenrollar los tags separados\n",
+        "  { \"$unwind\": \"$tagsArray\" }, # Desenrollamos los tags separados\n",
         "  {\n",
-        "    \"$match\": { \"tagsArray\": { \"$ne\": \"\" } } # Filtrar tags vacíos\n",
+        "    \"$match\": { \"tagsArray\": { \"$ne\": \"\" } } # Filtramos aquellas preguntas que no tengan tags\n",
         "  },\n",
         "  {\n",
         "    \"$lookup\": {\n",
-        "      \"from\": \"tags\", # Nombre de la colección de tags\n",
-        "      \"localField\": \"tagsArray\", # Campo a comparar en la colección actual (nombre del tag)\n",
-        "      \"foreignField\": \"TagName\", # Campo a comparar en la colección de tags (nombre del tag)\n",
-        "      \"as\": \"tag_info\" # Nombre del nuevo campo que contendrá la información del tag\n",
+        "      \"from\": \"tags\", # Miramos en la colección de tags\n",
+        "      \"localField\": \"tagsArray\", # Comparamos el nombre del tag en la colección actual\n",
+        "      \"foreignField\": \"TagName\", # Comparamos el nombre del tag en la colección de tags\n",
+        "      \"as\": \"tag_info\" # Establecemos el nuevo campo que contendrá la información del tag\n",
         "    }\n",
         "  },\n",
         "  {\n",
@@ -8307,15 +8317,15 @@
         "  {\n",
         "    \"$project\": {\n",
         "      \"_id\": 0,\n",
-        "      \"usuario_id\": \"$OwnerUserId\",\n",
-        "      \"pregunta_id\": \"$Id\",\n",
-        "      \"tag_id\": \"$tag_info.Id\" # Obtener el ID del tag del resultado del lookup\n",
+        "      \"usuario_id\": \"$OwnerUserId\", # Id de los usuarios que realizaron las preguntas\n",
+        "      \"pregunta_id\": \"$Id\", # Id de los posts de las preguntas\n",
+        "      \"tag_id\": \"$tag_info.Id\" # Obtenemos el ID del tag a través del resultado del \"lookup\"\n",
         "    }\n",
         "  }\n",
         "])\n",
         "\n",
         "\n",
-        "\n",
+        "# Mostramos la coleccion\n",
         "list_usuarios_preguntasTag = list(usuarios_preguntasTag)\n",
         "list_usuarios_preguntasTag"
       ]
@@ -8332,7 +8342,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8349,10 +8359,11 @@
     {
       "cell_type": "code",
       "source": [
-        "coleccion = db['usuarios_preguntasTag']  # Creamos la coleccion en la base de datos\n",
+        "# Creamos la coleccion en la base de datos\n",
+        "coleccion = db['usuarios_preguntasTag']\n",
         "\n",
         "# Insertar la lista de documentos en la colección\n",
-        "coleccion.insert_many(list_usuarios_preguntasTag)\n"
+        "coleccion.insert_many(list_usuarios_preguntasTag)"
       ],
       "metadata": {
         "id": "rvW8jYM4yLrl",
@@ -8361,7 +8372,7 @@
         },
         "outputId": "37b5caa4-0d57-47cc-86c6-637087811aad"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8374,6 +8385,33 @@
           "execution_count": 42
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para comprobar que la coleccion es correcta, procedemos a calcular el numero de entradas para el usuario con ID 21 y el tag con ID 31. Si la coleccion es correcta, tendriamos que tener dos entradas como en la sesion 2."
+      ],
+      "metadata": {
+        "id": "hJ0lrTZF9N3M"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Odu-GQQM9x30"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Procedemos con la segunda coleccion, **dado un ID de tag, qué usuarios han hecho preguntas de ese tag.**"
+      ],
+      "metadata": {
+        "id": "h92wHpFf9yjL"
+      }
     },
     {
       "cell_type": "code",
@@ -8407,7 +8445,7 @@
         "id": "U9cGf6v_oOOi",
         "outputId": "54efdd1f-2d18-4310-9020-18928e75108c"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9271,7 +9309,7 @@
         "id": "QT5JW0B5KwEY",
         "outputId": "5d9e01f9-af51-49cd-fb62-2fbb423d219a"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9296,7 +9334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "ZKCoN9oAfbr2"
       },
@@ -9380,7 +9418,7 @@
         "id": "kyDF54Dgog-D",
         "outputId": "d95c22bb-289b-4aa5-ae99-9bb4199bff11"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9405,7 +9443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "nMS2wYJYA1Ug",
         "colab": {
@@ -9604,7 +9642,7 @@
         "id": "g4Secw4N8-fC",
         "outputId": "62320732-8b2e-4dbe-f58d-55d95ff27f69"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9651,7 +9689,7 @@
         "id": "J9R8wWNwnDS9",
         "outputId": "44731eb5-efb0-4eab-f19f-9b3a4242f4d2"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9670,7 +9708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "_8NNbLnQfbr9",
         "colab": {
@@ -9769,7 +9807,7 @@
         "id": "OMUNhqAOxYf9",
         "outputId": "272b2611-553a-4680-dc55-d440eef06552"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -9841,7 +9879,7 @@
         },
         "outputId": "3ef80484-39ca-4902-ef0f-59082c4a0db1"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9901,7 +9939,7 @@
         "id": "XZcaTjbgtIru",
         "outputId": "a8dfdafc-e67a-4a40-c70c-cda86abfd5f6"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
