--- a/mongo/sesion4.ipynb
+++ b/mongo/sesion4.ipynb
@@ -8331,6 +8331,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Podemos observar como el numero de entradas coincide con las obtenidas en la sesion 2"
+      ],
+      "metadata": {
+        "id": "Aj9Q5U0KAMgr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "len(list_usuarios_preguntasTag)"
@@ -8355,6 +8364,15 @@
           "execution_count": 41
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A continuación, insertaremos la coleccion en la base de datos"
+      ],
+      "metadata": {
+        "id": "ozLz19pwAZWy"
+      }
     },
     {
       "cell_type": "code",
@@ -8397,12 +8415,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "list(db.usuarios_preguntasTag.find({\"usuario_id\":21,\"tag_id\":31}))"
+      ],
       "metadata": {
-        "id": "Odu-GQQM9x30"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Odu-GQQM9x30",
+        "outputId": "ad071a2e-537d-4611-9a8a-0854ee57c3ea"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'_id': ObjectId('6561c297184fa09ed5a3837e'),\n",
+              "  'usuario_id': 21,\n",
+              "  'pregunta_id': 36,\n",
+              "  'tag_id': 31},\n",
+              " {'_id': ObjectId('6561c297184fa09ed5a38380'),\n",
+              "  'usuario_id': 21,\n",
+              "  'pregunta_id': 37,\n",
+              "  'tag_id': 31}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     },
     {
       "cell_type": "markdown",
